// This file is subject to the terms and conditions defined in
// file 'LICENSE.txt', which is part of this source code package.
syntax = "proto3";

package receptor_v1;

option go_package = "github.com/trustero/api/go/receptor_v1";

import "receptor_v1/evidence.proto";


/**
 A finding is a set of evidence(s) collected from a service provider account.
 */
message Finding {

  /**
   Unique receptor identifier.  A receptor is expected to report findings from only one service provider type.  A
   stable identifier that represent the type of receptor reporting this finding.  The identifier is akin to a fully
   qualified Go package name or a Java class name.  For example, "github.com/trustero/receptor/gitlab".
   REMIND maps to Receptor.ModelID
   */
  string receptor_type = 1;

  /**
   The receptor's evidence source.
   REMIND maps to Receptor.TenantID
   */
  string service_provider_account = 2;

  /**
   One or more evidence collected by a typical receptor scan.
   */
  repeated Evidence evidences = 3;
}
